# examtool

./: .gitignore  EXAMple.typ  README.md  default.nix  example.json  examtool.py  flake.nix  pyproject.toml  sdk.py  setup.py  typst_exam.py
.github/: build.yml
.github/workflows/: main.yml
examtool/: __init__.py
npins/: sources.json
typst_exam/: __init__.py  test.py
